--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -1,6 +1,6 @@
 <RCC>
     <qresource prefix="/qml">
         <file alias="main.qml">qml/main.qml</file>
+        <file alias="MessageFormatter.qml">qml/MessageFormatter.qml</file>
     </qresource>
 </RCC>
-
